--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,10 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
+    
     <div class="container">
-    <%= render 'layouts/flash_tasks' %>
+    <%= render 'layouts/flash_messages' %>
     <%= yield %>
     </div>
   </body>
