--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,9 @@
-<h1>タスク新規作成ページ</h1>
-
-<%= render 'form', task: @task %>
-
-<%= link_to '一覧に戻る', tasks_path %>
+<% if logged_in? %>
+  <h1>タスク新規作成ページ</h1>
+  
+  <%= render 'form', task: @task %>
+  
+  <%= link_to '一覧に戻る', tasks_path %>
+<% else %>
+  <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+<% end %>
